WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221687
[GPUP] platform/mac/media/encrypted-media/fps-clearkey-crash.html is a flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=221687
Summary
[GPUP] platform/mac/media/encrypted-media/fps-clearkey-crash.html is a flaky ...
Peng Liu
Reported
2021-02-10 10:15:32 PST
platform/mac/media/encrypted-media/fps-clearkey-crash.html platform/mac/media/encrypted-media/fps-createMediaKeys.html platform/mac/media/encrypted-media/fps-createSession.html platform/mac/media/encrypted-media/fps-ephemeral-requestMediaKeySystemAccess.html platform/mac/media/encrypted-media/fps-generateRequest.html platform/mac/media/encrypted-media/fps-requestMediaKeySystemAccess.html
Attachments
Gardening patch
(1.66 KB, patch)
2021-03-04 14:00 PST
,
Jon Lee
no flags
Details
Formatted Diff
Diff
Patch
(6.18 KB, patch)
2021-03-17 13:58 PDT
,
Jer Noble
eric.carlson
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(7.85 KB, patch)
2021-03-18 10:04 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.19 KB, patch)
2021-03-18 14:11 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(9.09 KB, patch)
2021-03-18 19:15 PDT
,
Jer Noble
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(9.24 KB, patch)
2021-03-18 23:54 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-02-17 10:16:12 PST
<
rdar://problem/74438911
>
Rini Patel
Comment 2
2021-02-18 17:03:05 PST
platform/mac/media/encrypted-media/fps-clearkey-crash.html This is flaky, all other tests are passing.
Jon Lee
Comment 3
2021-03-04 14:00:25 PST
Created
attachment 422281
[details]
Gardening patch
EWS
Comment 4
2021-03-04 14:51:31 PST
Committed
r273919
: <
https://commits.webkit.org/r273919
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422281
[details]
.
Peng Liu
Comment 5
2021-03-04 15:13:38 PST
Reopen this bug because there is one remaining test failure.
Jer Noble
Comment 6
2021-03-17 13:58:53 PDT
Created
attachment 423527
[details]
Patch
Peng Liu
Comment 7
2021-03-17 15:47:12 PDT
Comment on
attachment 423527
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=423527&action=review
> LayoutTests/platform/mac-wk2/TestExpectations:1318 >
webkit.org/b/221847
platform/mac/media/encrypted-media/fps-encrypted-event.html [ Pass Timeout ]
Will this patch fix this flaky test?
Jer Noble
Comment 8
2021-03-18 10:04:14 PDT
Created
attachment 423613
[details]
Patch for landing
Jer Noble
Comment 9
2021-03-18 14:11:58 PDT
Created
attachment 423653
[details]
Patch for landing
Jer Noble
Comment 10
2021-03-18 14:13:32 PDT
(In reply to Peng Liu from
comment #7
)
> Comment on
attachment 423527
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=423527&action=review
> > > LayoutTests/platform/mac-wk2/TestExpectations:1318 > >
webkit.org/b/221847
platform/mac/media/encrypted-media/fps-encrypted-event.html [ Pass Timeout ] > > Will this patch fix this flaky test?
Probably.
Jer Noble
Comment 11
2021-03-18 19:15:50 PDT
Created
attachment 423683
[details]
Patch for landing
Jer Noble
Comment 12
2021-03-18 23:54:56 PDT
Created
attachment 423699
[details]
Patch for landing
EWS
Comment 13
2021-03-19 09:20:12 PDT
commit-queue failed to commit
attachment 423699
[details]
to WebKit repository. To retry, please set cq+ flag again.
EWS
Comment 14
2021-03-19 10:15:38 PDT
commit-queue failed to commit
attachment 423699
[details]
to WebKit repository. To retry, please set cq+ flag again.
EWS
Comment 15
2021-03-19 12:22:30 PDT
Committed
r274732
: <
https://commits.webkit.org/r274732
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423699
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug