[GPUP] platform/mac/media/encrypted-media/fps-clearkey-crash.html is a flaky timeout https://bugs.webkit.org/show_bug.cgi?id=221687 <rdar://problem/74438911>

Reviewed by Eric Carlson.

Source/WebKit:

Add support for passing the value of MediaPlayerPrivate::waitingForKey() across the process boundary.

* GPUProcess/media/RemoteMediaPlayerProxy.cpp:
(WebKit::RemoteMediaPlayerProxy::mediaPlayerWaitingForKeyChanged):
* WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::waitingForKeyChanged):
(WebKit::MediaPlayerPrivateRemote::waitingForKey const):
* WebProcess/GPU/media/MediaPlayerPrivateRemote.h:
* WebProcess/GPU/media/MediaPlayerPrivateRemote.messages.in:

LayoutTests:

* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/235550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274732 268f45cc-cd09-0410-ab3c-d52691b4dbfc