Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.h
@@ -145,7 +145,7 @@ public:
     void activeSourceBuffersChanged();
 
 #if ENABLE(ENCRYPTED_MEDIA)
-    void waitingForKeyChanged();
+    void waitingForKeyChanged(bool);
     void initializationDataEncountered(const String&, IPC::DataReference&&);
 #endif
 
@@ -422,6 +422,7 @@ private:
     bool m_isCurrentPlaybackTargetWireless { false };
     bool m_invalid { false };
     bool m_wantPlaybackQualityMetrics { false };
+    bool m_waitingForKey { false };
 };
 
 } // namespace WebKit
